--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -230,14 +230,14 @@
         </p>
         <div id="status-visual-indicators" style="width: 900px; height: 500px">
             <table style="width:100%; height:100%">
-                <tr>
+                <tr style="height: 20%">
                     <th>Sensor 1</th>
                     <th>Sensor 2</th>
                     <th>Sensor 3</th>
                 </tr>
                 <tr>
                     <th>
-                        <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%">ON</button>
+                        <button id="sensor-1-status" style="display: inline-block; text-align: center; background-color: green; font-size: large; border-radius: 50%">ON</button>
                     </th>
                     <th></th>
                     <th></th>
