--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -237,7 +237,7 @@
                 </tr>
                 <tr>
                     <th>
-                        <button id="sensor-1-status" style="display: inline-block; text-align: center; background-color: green; font-size: large; border-radius: 50%">ON</button>
+                        <button id="sensor-1-status" style="width: 90%; height: 90%; display: inline-block; text-align: center; background-color: green; font-size: large; border-radius: 50%">ON</button>
                     </th>
                     <th></th>
                     <th></th>
