added green buttons for sensor status

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -235,7 +235,7 @@
                     <th>Sensor 2</th>
                     <th>Sensor 3</th>
                 </tr>
-                <tr>
+                <tr style="border: black; border-style: solid;">
                     <th>
                         <button id="sensor-1-status" style="width: 90%; height: 90%; display: inline-block; text-align: center; background-color: green; font-size: large; border-radius: 50%">ON</button>
                     </th>
