added green buttons for sensor status

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -237,7 +237,9 @@
                 </tr>
                 <tr style="border: black; border-style: solid;">
                     <th>
-                        <button id="sensor-1-status" style="width: 90%; height: 90%; display: inline-block; text-align: center; background-color: green; font-size: large; border-radius: 50%">ON</button>
+                        <div>
+                            <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%">ON</button>
+                        </div>
                     </th>
                     <th></th>
                     <th></th>
