--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -237,7 +237,7 @@
                 </tr>
                 <tr style="border: black; border-style: solid;">
                     <th>
-                        <div>
+                        <div style="width: 160px; height: 160px;">
                             <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%">ON</button>
                         </div>
                     </th>
