added green buttons for sensor status

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -238,7 +238,8 @@
                 <tr style="border: black; border-style: solid;">
                     <th>
                         <div style="width: 160px; height: 160px;">
-                            <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%">ON</button>
+                            <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%;
+                                        color: wheat; margin-left: 140px;">ON</button>
                         </div>
                     </th>
                     <th></th>
