added green buttons for sensor status

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -236,10 +236,10 @@
                     <th>Sensor 3</th>
                 </tr>
                 <tr style="border: black; border-style: solid;">
-                    <th>
+                    <th style="padding-bottom: 200px;">
                         <div style="width: 160px; height: 160px;">
                             <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%;
-                                        color: wheat; margin-left: 140px;">ON</button>
+                                        color: wheat; margin-left: 150px; width: 140px; height: 140px;">ON</button>
                         </div>
                     </th>
                     <th></th>
