added 3 buttons for 3 sensors status

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -239,11 +239,21 @@
                     <th style="padding-bottom: 200px;">
                         <div style="width: 160px; height: 160px;">
                             <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%;
-                                        color: wheat; margin-left: 150px; width: 140px; height: 140px;">ON</button>
+                                        color: wheat; margin-left: 150px; width: 140px; height: 140px; border-style: solid; border-color: wheat;">ON</button>
                         </div>
                     </th>
-                    <th></th>
-                    <th></th>
+                    <th style="padding-bottom: 200px;">
+                        <div style="width: 160px; height: 160px;">
+                            <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%;
+                                        color: wheat; margin-left: 150px; width: 140px; height: 140px; border-style: solid; border-color: wheat;">ON</button>
+                        </div>
+                    </th>
+                    <th style="padding-bottom: 200px;">
+                        <div style="width: 160px; height: 160px;">
+                            <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%;
+                                        color: wheat; margin-left: 150px; width: 140px; height: 140px; border-style: solid; border-color: wheat;">ON</button>
+                        </div>
+                    </th>
                 </tr>
             </table>
         </div>
