added 3 buttons for 3 sensors ... colors are GREEN/ RED/ PURPLE

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -239,19 +239,19 @@
                     <th style="padding-bottom: 200px;">
                         <div style="width: 160px; height: 160px;">
                             <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%;
-                                        color: wheat; margin-left: 150px; width: 140px; height: 140px; border-style: solid; border-color: wheat;">ON</button>
+                                        color: wheat; margin-left: 80px; width: 140px; height: 140px; border-style: solid; border-color: wheat;">ON</button>
                         </div>
                     </th>
                     <th style="padding-bottom: 200px;">
                         <div style="width: 160px; height: 160px;">
-                            <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%;
-                                        color: wheat; margin-left: 150px; width: 140px; height: 140px; border-style: solid; border-color: wheat;">ON</button>
+                            <button id="sensor-1-status" style="text-align: center; background-color: red; font-size: large; border-radius: 50%;
+                                        color: wheat; margin-left: 80px; width: 140px; height: 140px; border-style: solid; border-color: wheat;">OFF</button>
                         </div>
                     </th>
                     <th style="padding-bottom: 200px;">
                         <div style="width: 160px; height: 160px;">
-                            <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%;
-                                        color: wheat; margin-left: 150px; width: 140px; height: 140px; border-style: solid; border-color: wheat;">ON</button>
+                            <button id="sensor-1-status" style="text-align: center; background-color: purple; font-size: large; border-radius: 50%;
+                                        color: wheat; margin-left: 80px; width: 140px; height: 140px; border-style: solid; border-color: wheat;">BAD</button>
                         </div>
                     </th>
                 </tr>
