added drop-down list for line selection in graph power line/ups

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -225,7 +225,7 @@
         </p>
         <div id="curve-chart-power" style="width: 900px; height: 500px"></div>
 
-        <p>
+        <p style="margin-top: 50px;">
             <strong><u>Visual Indicators for Tasmota Sensors Status in VLAB3</u></strong> 
         </p>
         <div id="status-visual-indicators" style="width: 900px; height: 500px">
@@ -261,7 +261,14 @@
         <p>
             <strong><u>Area Graphs for Line and UPS Power Contribution to Total</u></strong>
         </p>
-        <div id="ups-line-power" style="width: 900px; height: 500px"></div>
+        <div id="ups-line-power" style="width: 900px; height: 500px">
+            <select>
+                <option value=1>Line 1</option>
+                <option value=2>Line 2</option>
+                <option value=3>Line 3</option>
+                <option value=4>Line 4</option>
+            </select>
+        </div>
 
         <script src="" async defer></script>
     </body>
