added drop-down list for line selection in graph power line/ups

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -238,19 +238,22 @@
                 <tr style="border: black; border-style: solid;">
                     <th style="padding-bottom: 200px;">
                         <div style="width: 160px; height: 160px;">
-                            <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: large; border-radius: 50%;
+                            <button id="sensor-1-status" title="Right-Click to Toggle Status" 
+                                    style="text-align: center; background-color: green; font-size: large; border-radius: 50%;
                                         color: wheat; margin-left: 80px; width: 140px; height: 140px; border-style: solid; border-color: wheat;">ON</button>
                         </div>
                     </th>
                     <th style="padding-bottom: 200px;">
                         <div style="width: 160px; height: 160px;">
-                            <button id="sensor-1-status" style="text-align: center; background-color: red; font-size: large; border-radius: 50%;
+                            <button id="sensor-2-status" title="Right-Click to Toggle Status"
+                                    style="text-align: center; background-color: red; font-size: large; border-radius: 50%;
                                         color: wheat; margin-left: 80px; width: 140px; height: 140px; border-style: solid; border-color: wheat;">OFF</button>
                         </div>
                     </th>
                     <th style="padding-bottom: 200px;">
                         <div style="width: 160px; height: 160px;">
-                            <button id="sensor-1-status" style="text-align: center; background-color: purple; font-size: large; border-radius: 50%;
+                            <button id="sensor-3-status" title="Right-Click to Toggle Status"
+                                    style="text-align: center; background-color: purple; font-size: large; border-radius: 50%;
                                         color: wheat; margin-left: 80px; width: 140px; height: 140px; border-style: solid; border-color: wheat;">BAD</button>
                         </div>
                     </th>
@@ -262,6 +265,7 @@
             <strong><u>Area Graphs for Line and UPS Power Contribution to Total</u></strong>
         </p>
         <div id="ups-line-power" style="width: 900px; height: 500px">
+            <i>Please select Server for Power Distrubution UPS/ Line Area Chart:</i> 
             <select>
                 <option value=1>Line 1</option>
                 <option value=2>Line 2</option>
