add my-file.js into temperature.html

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="">
 
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script type="text/javascript" src="sensors-charts.js"></script>
 
         <script type="text/javascript">
            google.charts.load('current', {'packages': ['corechart']});
