Use AJAX to call serverside python-flask from JS

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -49,8 +49,8 @@
 
                    full_datetime_offset = full_datetime.concat("-0000");
                    
-                   console.log("Full Datetime Offset is ... (" + (i+1) + ")" + full_datetime_offset + "/ " + Number( values[2] ));
-                   console.log( ".... " + Date.parse(full_datetime.trim()) );
+                   //console.log("Full Datetime Offset is ... (" + (i+1) + ")" + full_datetime_offset + "/ " + Number( values[2] ));
+                   //console.log( ".... " + Date.parse(full_datetime.trim()) );
 
                    //my_datetime = full_datetime.split("T");
 
